force-app/main/default/objects/Special_Preference__c/Special_Preference__c.object-meta.xml
<CustomObject>
    <label>Special Preference</label>
    <nameField>
        <displayFormat>SPL-{00000000}</displayFormat>
        <label>Special Preference Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>