force-app/main/default/objects/Special_Preference__c/fields/Food_Beverage_Tobacco_Dislikes__c.field-meta.xml
<CustomField>
    <fullName>Food_Beverage_Tobacco_Dislikes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Food/Beverage/Tobacco (Dislikes)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>