force-app/main/default/objects/Special_Preference__c/fields/Gaming_Habits__c.field-meta.xml
<CustomField>
    <fullName>Gaming_Habits__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Gaming Habits</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>