force-app/main/default/objects/Special_Preference__c/fields/Hotel_Room_Smoking_requirement__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Room_Smoking_requirement__c</fullName>
    <label>Hotel Room Smoking requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smoking</fullName>
            </value>
            <value>
                <fullName>Non Smoking</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>