force-app/main/default/objects/Special_Preference__c/fields/Incident_Details__c.field-meta.xml
<CustomField>
    <fullName>Incident_Details__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Incident Details</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>