force-app/main/default/objects/Special_Preference__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>