force-app/main/default/objects/Special_Preference__c/fields/Patron__c.field-meta.xml
<CustomField>
    <fullName>Patron__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Special Preferences</relationshipLabel>
    <relationshipName>Special_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>