force-app/main/default/objects/Special_Preference__c/fields/Patron_ExtId__c.field-meta.xml
<CustomField>
    <fullName>Patron_ExtId__c</fullName>
    <description>Patron ID(external Id) of the Contact record</description>
    <formula>Patron__r.Patron_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Patron ID(external Id) of the Contact record</inlineHelpText>
    <label>Patron ExtId</label>
    <type>Text</type>
</CustomField>