force-app/main/default/objects/Special_Preference__c/fields/Personal_Table_Limit__c.field-meta.xml
<CustomField>
    <fullName>Personal_Table_Limit__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Personal Table Limit</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>