force-app/main/default/objects/Special_Preference__c/fields/Preferred_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Dealer__c</fullName>
    <label>Preferred Dealer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Shanghainese</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Non-asian</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Caucasian</fullName>
            </value>
            <value>
                <fullName>Non Caucasian</fullName>
            </value>
            <value>
                <fullName>Non Thai</fullName>
            </value>
            <value>
                <fullName>Non-Chinese</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>