force-app/main/default/objects/Special_Preference__c/fields/Specify_Other__c.field-meta.xml
<CustomField>
    <fullName>Specify_Other__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Specify Other</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>