force-app/main/default/objects/Special_Preference__c/fields/SPL_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SPL_External_ID__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>SPL External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>