force-app/main/default/objects/Special_Preference__c/recordTypes/Gaming.recordType-meta.xml
<RecordType>
    <fullName>Gaming</fullName>
    <active>true</active>
    <label>Gaming</label>
</RecordType>