force-app/main/default/objects/Special_Preference__c/recordTypes/Non_Gaming.recordType-meta.xml
<RecordType>
    <fullName>Non_Gaming</fullName>
    <active>true</active>
    <label>Non Gaming</label>
</RecordType>