force-app/main/default/objects/Special_Preference__c/validationRules/Enter_Specify_Other_when_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Specify_Other_when_Other</fullName>
    <active>true</active>
    <errorConditionFormula>/*
AND(

ISBLANK(Specify_Other__c),
INCLUDES(Hotel_amenities__c, &apos;Other&apos;)
)
*/

IF($Permission.Skip_Validations_Permission, 
false,
AND(

ISBLANK(Specify_Other__c),
INCLUDES(Hotel_amenities__c, &apos;Other&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Specify_Other__c</errorDisplayField>
    <errorMessage>Please specify &quot;Other Amenities&quot;</errorMessage>
</ValidationRule>