force-app/main/default/objects/Special_Preference__c/validationRules/Select_Other_Preferred_Dealer.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Other_Preferred_Dealer</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Permission.Skip_Validations_Permission, false,
AND(

ISBLANK(Preferred_Dealer__c),
INCLUDES(Preferred_Dealer__c, &apos;Other&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>Please enter &quot;Other&quot; Preferred Dealer.</errorMessage>
</ValidationRule>